Add section gallery, services, footer

--- a/project1/index.html
+++ b/project1/index.html
@@ -88,10 +88,312 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card-space">
+                                    <img src="assets/img/2.png" alt="">
+
+                                    <div class="card-overlay">
+                                        <h5>Ruang Office 1 Orang</h5>
+
+                                        <div class="d-flex justify-content-between align-items-end">
+                                            <!-- kiri -->
+                                            <div class="d-flex flex-column gap-2">
+                                                <button class="btn btn-light btn-sm">Details</button>
+                                                <button class="btn btn-success btn-sm">
+                                                    Contact Us <i class="bi bi-whatsapp"></i>
+                                                </button>
+                                            </div>
+                                            <!-- kanan -->
+                                            <div class="price-tag">Rp. 500.000/bln</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-space">
+                                    <img src="assets/img/2.png" alt="">
+
+                                    <div class="card-overlay">
+                                        <h5>Ruang Office 1 Orang</h5>
+
+                                        <div class="d-flex justify-content-between align-items-end">
+                                            <!-- kiri -->
+                                            <div class="d-flex flex-column gap-2">
+                                                <button class="btn btn-light btn-sm">Details</button>
+                                                <button class="btn btn-success btn-sm">
+                                                    Contact Us <i class="bi bi-whatsapp"></i>
+                                                </button>
+                                            </div>
+                                            <!-- kanan -->
+                                            <div class="price-tag">Rp. 500.000/bln</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card-space">
+                                    <img src="assets/img/2.png" alt="">
+
+                                    <div class="card-overlay">
+                                        <h5>Ruang Office 1 Orang</h5>
+
+                                        <div class="d-flex justify-content-between align-items-end">
+                                            <!-- kiri -->
+                                            <div class="d-flex flex-column gap-2">
+                                                <button class="btn btn-light btn-sm">Details</button>
+                                                <button class="btn btn-success btn-sm">
+                                                    Contact Us <i class="bi bi-whatsapp"></i>
+                                                </button>
+                                            </div>
+                                            <!-- kanan -->
+                                            <div class="price-tag">Rp. 500.000/bln</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-space">
+                                    <img src="assets/img/2.png" alt="">
+
+                                    <div class="card-overlay">
+                                        <h5>Ruang Office 1 Orang</h5>
+
+                                        <div class="d-flex justify-content-between align-items-end">
+                                            <!-- kiri -->
+                                            <div class="d-flex flex-column gap-2">
+                                                <button class="btn btn-light btn-sm">Details</button>
+                                                <button class="btn btn-success btn-sm">
+                                                    Contact Us <i class="bi bi-whatsapp"></i>
+                                                </button>
+                                            </div>
+                                            <!-- kanan -->
+                                            <div class="price-tag">Rp. 500.000/bln</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="facility-section">
+                <h2 class="section-title text-center mt-5">Fasilitas SuitableSpace</h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="feature-box">
+                            <div class="feature-icon">
+                                <i class="bi bi-wifi"></i>
+                            </div>
+                            <h6>Internet & Wifi</h6>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="feature-box">
+                            <div class="feature-icon">
+                                <i class="bi bi-cup-hot"></i>
+                            </div>
+                            <h6>Free Cofee & Tea</h6>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="feature-box">
+                            <div class="feature-icon">
+                                <i class="bi bi-camera-video"></i>
+                            </div>
+                            <h6>CCTV & Security</h6>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="feature-box">
+                            <div class="feature-icon">
+                                <i class="bi bi-droplet"></i>
+                            </div>
+                            <h6>Daily Cleaning</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="benefit-section">
+                <h2 class="section-title fw-bold text-center mt-5">Keuntungan Sewa Kantor di SuitableSpace</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="benefit-card d-flex align-items-start gap-3">
+                            <div class="icon-wrapper text-white">
+                                <i class="bi bi-briefcase-fill"></i>
+                            </div>
+                            <div>
+                                <h3>Profesional</h3>
+                                <p>Menciptakan sebuah sistem yang menjadi unggulan yang
+                                    dikelola secara Profesional dengan standar good
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="benefit-card light d-flex align-items-start gap-3">
+                            <div class="icon-wrapper text-white">
+                                <i class="bi bi-person-arms-up"></i>
+                            </div>
+                            <div>
+                                <h3>Lebih Hemat</h3>
+                                <p>Menciptakan sebuah sistem yang menjadi unggulan yang
+                                    dikelola secara Profesional dengan standar good
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="benefit-card light">
+                            <h5>
+                                <i class="bi bi-briefcase-fill"></i> Profesional
+                            </h5>
+                            <p>Menciptakan sebuah sistem yang menjadi unggulan yang
+                                dikelola secara Profesional dengan standar good
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="benefit-card light">
+                            <h5>
+                                <i class="bi bi-briefcase-fill"></i> Profesional
+                            </h5>
+                            <p>Menciptakan sebuah sistem yang menjadi unggulan yang
+                                dikelola secara Profesional dengan standar good
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
+        <div class="gallery-section">
+            <h2 class="section-title text-center mb-4 mt-5">Galeri Serviced SuitableSpace</h2>
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row justify-content-center">
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 col-6">
+                                <div class="service-card">
+                                    <img src="assets/img/7.png" class="d-block w-100 img-fluid rounded" alt="...">
+                                    <h6 class="mt-2">Lobby</h6>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div> -->
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <footer class="text-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Layanan</h6>
+                        <a href="">Virtual Office</a>
+                        <a href="">Sewa Kantor</a>
+                        <a href="">Ruang Metting</a>
+                        <a href="">Ruang Acara</a>
+                        <a href="">Studio Podcast</a>
+                        <a href="">Layanan</a>
+                    </div>
+                    <div class="col-md-3">
+                        <h6>Menu</h6>
+                        <a href="">FAQ</a>
+                        <a href="">kebijakan pribadi</a>
+                        <a href="">S & K</a>
+                        <a href="">Karir</a>
+                        <a href="">Promo</a>
+                        <a href="">Check Agreement</a>
+                    </div>
+                    <div class="col-md-3">
+                        <h6>Lainnya</h6>
+                        <a href="">Beranda</a>
+                        <a href="">Tentang Kami</a>
+                        <a href="">Lokasi</a>
+                        <a href="">Galeri</a>
+                        <a href="">Blog</a>
+                        <a href="">Kontak Kami</a>
+                    </div>
+                    <div class="col-md-3">
+                        <h6>Kantor Kami</h6>
+                        <p>Cinere Terrace Suite Blok JC 1</p>
+                        <p>Cinere Terrace Suite Blok JC 1</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
